package com.survivalcoding;

public interface Thing {
    double getWeight();
    void setWeight(double weight);
}

